<?xml version="1.0"?>
<package format="2">
    <name>moveit_arm_commander</name>
    <version>0.0.1</version>
    <description>The moveit_arm_commander package</description>

    <maintainer email="liang@informatik.uni-hamburg.de">Hongzhuo Liang</maintainer>
    <license>MIT</license>

    <author email="liang@informatik.uni-hamburg.de">Hongzhuo Liang</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
